--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
@@ -10,5 +10,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestRenderingSystem.cpp">
       <Filter>TestRenderingSystem.DX11</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestLayouts.cpp">
+      <Filter>TestRenderingSystem.DX11</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
