[Test] Check if shader for SolidColorBrush compiles properly with DX11

--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
@@ -13,5 +13,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestLayouts.cpp">
       <Filter>TestRenderingSystem.DX11</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestBrushShaderCompilation.cpp">
+      <Filter>TestRenderingSystem.DX11</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
