--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\main.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestBrushShaderCompilation.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestLayouts.cpp" />
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestPenShaderCompilation.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestRenderingSystem.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
