--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.DX11.vcxproj.filters
@@ -16,5 +16,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestBrushShaderCompilation.cpp">
       <Filter>TestRenderingSystem.DX11</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem.DX11\TestPenShaderCompilation.cpp">
+      <Filter>TestRenderingSystem.DX11</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
