--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -473,7 +473,9 @@
     <ClCompile Include="..\..\..\Core\Media\Brushes\GradientBrush.cpp">
       <Filter>Core\Media\Brushes</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Core\Media\Brushes\LinearGradientBrush.cpp" />
+    <ClCompile Include="..\..\..\Core\Media\Brushes\LinearGradientBrush.cpp">
+      <Filter>Core\Media\Brushes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\Core\System\Events\EventsSystem.inl">
